--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
     "@types/three": "0.152.1",
+    "leva": "^0.9.35",
+    "playroomkit": "^0.0.77",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "0.153.0"
