--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "r3f-vite-starter",
+  "name": "card-game",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -12,6 +12,8 @@
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
     "@types/three": "0.152.1",
+    "framer-motion": "^11.2.12",
+    "framer-motion-3d": "^11.2.12",
     "leva": "^0.9.35",
     "playroomkit": "^0.0.77",
     "react": "^18.2.0",
